# yttt

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml  release.yml
assets/app-icon/: README.md
assets/app-icon/macos/: AppIcon.icns
crates/yttt-core/: Cargo.toml
crates/yttt-core/src/: commands.rs  lib.rs
crates/yttt-core/src/model/: ids.rs  layout.rs  mod.rs  project.rs  workspace.rs
crates/yttt-ssh/: Cargo.toml
crates/yttt-ssh/src/: credential.rs  host_keys.rs  lib.rs  sftp.rs  terminal.rs  transport.rs
crates/yttt-terminal/: Cargo.toml  README.md
crates/yttt-terminal/src/: clipboard.rs  colors.rs  event.rs  input.rs  lib.rs  main.rs  mouse.rs  perf.rs  pty.rs  render.rs  terminal.rs  test_support.rs  view.rs
crates/yttt-terminal/src/pty/: driver.rs
crates/yttt-terminal/src/render/: cache.rs  content.rs
crates/yttt-terminal/tests/: pty_runtime.rs
crates/yttt-ui/: Cargo.toml
crates/yttt-ui/src/: lib.rs  style.rs  theme.rs
crates/yttt-ui/src/primitives/: button.rs  dialog.rs  icon_button.rs  input.rs  notification.rs  panel.rs  row.rs  select.rs  sidebar.rs  status.rs  switch.rs  tabs.rs
docs/: usage.md
docs/superpowers/plans/: 2026-07-10-project-file-tree-editor-implementation-plan.md
docs/superpowers/specs/: 2026-07-10-project-file-tree-editor-design.md
packaging/linux/: com.yttt.app.desktop
packaging/windows/: yttt.iss
scripts/: build-app-icons.sh  build-linux-tar.sh  build-macos-bundle.sh  build-macos-dmg.sh  build-windows-installer.ps1  run-dev-app.sh  run-terminal-perf.sh  summarize-terminal-perf.py  terminal-perf-workload.py  verify-windows-binary.ps1
src/: lib.rs  main.rs
src/commands/: mod.rs
src/config/: default_layout.rs  keybindings.rs  layout_loader.rs  mod.rs  paths.rs  personal_layout.rs  settings.rs  ssh.rs  ssh_command.rs  theme.rs
src/model/: ids.rs  layout.rs  mod.rs  split_tree.rs  workspace.rs
src/palette/: mod.rs
src/runtime/: agent.rs  file_search.rs  git_status.rs  mod.rs  notification.rs  project.rs  terminal.rs
src/ui/: actions.rs  agent_status.rs  app.rs  assets.rs  components.rs  font_options.rs  i18n.rs  icon_theme.rs  input_owner.rs  keybinding_display.rs  keybindings_editor.rs  macos.rs  mod.rs  overlay.rs  palette.rs  palette_surface.rs  root.rs  settings.rs  sidebar.rs  split_view.rs  startup.rs  tabs.rs  terminal_pane.rs  theme.rs  titlebar.rs  toast.rs
src/ui/app/: assets.rs  mod.rs  startup.rs
src/ui/app/platform/: macos.rs  mod.rs
src/ui/components/: action.rs  mod.rs  notification.rs  palette_item.rs  settings.rs
src/ui/editor/: breadcrumbs.rs  document.rs  file_io.rs  language.rs  language_catalog.rs  mod.rs  readonly_code_view.rs  runtime.rs  state.rs  view.rs  vim.rs  work_area.rs  workspace.rs
src/ui/editor/queries/: csharp.scm
src/ui/i18n/: en.rs  key.rs  mod.rs  zh_cn.rs
src/ui/interaction/: actions.rs  input_owner.rs  key_dispatch.rs  mod.rs  overlay.rs  overlay_policy.rs
src/ui/notifications/: mod.rs
src/ui/palette/: mod.rs  surface.rs
src/ui/palette/picker/: mod.rs  view.rs
src/ui/picker/: delegate.rs  item.rs  mod.rs  state.rs  view.rs
src/ui/primitives/: button.rs  dialog.rs  icon_button.rs  input.rs  mod.rs  notification.rs  panel.rs  row.rs  select.rs  sidebar.rs  status.rs  switch.rs  tabs.rs
src/ui/project_tree/: fs.rs  mod.rs  state.rs  view.rs
src/ui/root/: action_handlers.rs  dialogs.rs  document_lifecycle.rs  helpers.rs  layout_editor.rs  layout_editor_controller.rs  non_destructive_tests.rs  palette.rs  project_files.rs  render.rs  resize.rs  settings.rs  surface.rs
src/ui/root/settings/: view.rs
src/ui/settings/: font_options.rs  keybinding_display.rs  keybindings.rs  mod.rs
src/ui/terminal/: mod.rs  pane.rs
src/ui/theme/: icons.rs  markdown.rs  mod.rs  one_dark.rs  zed.rs
src/ui/theme/zed/: installed.rs
src/ui/workbench/: action_handlers.rs  dialogs.rs  document_lifecycle.rs  file_finder.rs  git.rs  helpers.rs  layout_editor.rs  layout_editor_controller.rs  mod.rs  non_destructive_tests.rs  onboarding.rs  palette.rs  performance.rs  project_files.rs  render.rs  resize.rs  settings.rs  ssh_connections.rs  ssh_project_picker.rs  surface.rs  work_area.rs
src/ui/workbench/settings/: view.rs
src/ui/workbench/shell/: mod.rs  sidebar.rs  split_view.rs  tabs.rs  titlebar.rs
src/ui/workbench/state/: documents.rs  mod.rs  overlays.rs  palette.rs  project.rs  settings.rs  ssh.rs  terminal.rs
tests/: commands_keybindings.rs  default_layout_config.rs  dev_app_bundle.rs  editor.rs  editor_document.rs  editor_workspace.rs  git_workbench.rs  icon_theme.rs  layout_config.rs  macos_bundle.rs  macos_runtime.rs  palette.rs  performance_metrics.rs  project_file_io.rs  project_tree.rs  pty_runtime.rs  runtime_agent.rs  settings_config.rs  split_tree.rs  terminal_input.rs  theme_config.rs  ui_assets.rs  ui_i18n.rs  ui_shell.rs  ui_state.rs  workspace.rs
