[package]
name = "yttt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
gpui = "0.2.2"
gpui-component = { version = "0.5.1", features = ["tree-sitter-languages"] }
gpui-component-assets = "0.5"
tree-sitter-toml-ng = "0.7"
yttt-terminal = { path = "crates/yttt-terminal" }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[dev-dependencies]
gpui = { version = "0.2.2", features = ["test-support"] }
tempfile = "3"
