[package]
name = "yttt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
gpui = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe" }
gpui-component = { git = "https://github.com/longbridge/gpui-component", rev = "1505b1487131adbb443f6c69e87847db35bfa2d1", features = ["tree-sitter-languages"] }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component", rev = "1505b1487131adbb443f6c69e87847db35bfa2d1", package = "gpui-component-assets" }
tree-sitter = "0.26"
tree-sitter-bash = "0.23.3"
tree-sitter-c = "0.24.1"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-fish = "3.6.0"
tree-sitter-gdscript = "6.1.0"
tree-sitter-go = "0.23.4"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.23.1"
tree-sitter-kotlin-sg = "0.4.0"
tree-sitter-lua = "0.4.1"
tree-sitter-php = "0.24.2"
tree-sitter-python = "0.23.6"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "0.24.0"
tree-sitter-scala = "0.23.4"
tree-sitter-swift = "0.7.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-zig = "1.1.2"
tree-sitter-toml-ng = "0.7"
yttt-terminal = { path = "crates/yttt-terminal" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies.gpui_platform]
git = "https://github.com/zed-industries/zed"
rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe"
features = ["font-kit", "runtime_shaders"]

[target.'cfg(target_os = "windows")'.dependencies.gpui_platform]
git = "https://github.com/zed-industries/zed"
rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe"

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies.gpui_platform]
git = "https://github.com/zed-industries/zed"
rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe"
features = ["wayland", "x11"]

[dev-dependencies]
gpui = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe", features = ["test-support"] }
tempfile = "3"
