[workspace]
members = [".", "crates/yttt-core", "crates/yttt-terminal", "crates/yttt-ui"]
exclude = ["vendor/gpui-component", "vendor/gpui-markdown-editor"]
resolver = "3"

[package]
name = "yttt"
version = "0.1.3"
edition = "2024"
default-run = "yttt"

[dependencies]
anyhow = "1"
dunce = "1"
gpui = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe" }
gpui-component = { path = "vendor/gpui-component/crates/ui", features = ["tree-sitter-languages"] }
gpui-component-assets = { path = "vendor/gpui-component/crates/assets" }
gpui-markdown-editor = { path = "vendor/gpui-markdown-editor" }
notify = "7.0.0"
tree-sitter = "0.26"
tree-sitter-bash = "0.23.3"
tree-sitter-c = "0.24.1"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-fish = "3.6.0"
tree-sitter-gdscript = "6.1.0"
tree-sitter-go = "0.23.4"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.23.1"
tree-sitter-kotlin-sg = "0.4.0"
tree-sitter-lua = "0.4.1"
tree-sitter-php = "0.24.2"
tree-sitter-powershell = "0.26.4"
tree-sitter-python = "0.23.6"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "0.24.0"
tree-sitter-scala = "0.23.4"
tree-sitter-swift = "0.7.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-xml = "0.7.0"
tree-sitter-zig = "1.1.2"
tree-sitter-toml-ng = "0.7"
yttt-core = { path = "crates/yttt-core" }
yttt-terminal = { path = "crates/yttt-terminal" }
yttt-ui = { path = "crates/yttt-ui" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.31.4"
sys-locale = "0.3.2"
thiserror = "2"
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies.gpui_platform]
git = "https://github.com/zed-industries/zed"
rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe"
features = ["font-kit", "runtime_shaders"]

[target.'cfg(target_os = "windows")'.dependencies.gpui_platform]
git = "https://github.com/zed-industries/zed"
rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe"

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies.gpui_platform]
git = "https://github.com/zed-industries/zed"
rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe"
features = ["wayland", "x11"]

[build-dependencies]
winresource = "0.1"

[dev-dependencies]
gpui = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe", features = ["test-support"] }
tempfile = "3"
