[package]
name = "yttt-terminal"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "YTTT terminal component for GPUI"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe" }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe" }
alacritty_terminal = "0.25.1"
anyhow = "1"
portable-pty = "0.9"
ropey = "1"
parking_lot = "0.12"
flume = "0.12"

[dependencies.arboard]
version = "3"
features = ["wayland-data-control"]

[dev-dependencies]
gpui = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe", features = ["test-support"] }
