[package]
name = "yttt-terminal"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "YTTT terminal component for GPUI"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe" }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe" }
alacritty_terminal = "0.25.1"
anyhow = "1"
portable-pty = "0.9"
parking_lot = "0.12"
flume = "0.12"
async-channel = "2"
bytes = "1"
lru = "0.12"
smallvec = "1"
unicode-width = "0.2"
serde = { version = "1", features = ["derive"] }


[dev-dependencies]
gpui = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe", features = ["test-support"] }
