[package]
name = "yttt-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe" }
gpui-component = { path = "../../vendor/gpui-component/crates/ui" }
serde = { version = "1", features = ["derive"] }
